add my own style and logo

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,9 +7,12 @@
     <link href="styles.css" rel="stylesheet" />
     <title>My First Portfolio</title>
   </head>
-  <body>
+  <body class="works_on_smartphone">
     <header>
       <ul>
+        <li class="logo">
+          <img src="images/dummy_logo.png" alt="My Logo" />
+        </li>
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
@@ -22,8 +25,8 @@
         <h3>Introduction</h3>
 
         <p>
-          Hello! My name is [Your Name], and this is my very first portfolio
-          website.
+          Hello! My name is Elshaday Mezgebu, and this is my very first
+          portfolio website.
         </p>
         <p>
           This project is part of my practice in structuring web pages, using
@@ -82,7 +85,7 @@
 
     <footer>
       <p>
-        Made by [Your Name] -
+        Made by Elshaday Mezgebu -
         <a href="https://www.alxafrica.com" target="_blank">here</a>
       </p>
     </footer>
