--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -37,7 +37,7 @@
 
     <footer>
       <p>
-        Made by [Your Name] -
+        Made by Elshaday Mezgebu -
         <a href="https://www.alxafrica.com" target="_blank">here</a>
       </p>
     </footer>
